objects/APTS_Standard_Corridor__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Deactivation_Date__c</fullName>
        <label>Deactivation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Factory__c</fullName>
        <label>Factory</label>
        <referenceTo>APTS_Factory__c</referenceTo>
        <relationshipLabel>Standard Corridors</relationshipLabel>
        <relationshipName>Standard_Corridors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_P_Avg__c</fullName>
        <label>P - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_P_High__c</fullName>
        <label>P - High</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_P_Low__c</fullName>
        <label>P - Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Standard Corridor</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standard Corridors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>